--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "private": true,
   "dependencies": {
     "@capacitor/core": "2.2.1",
+    "@ionic-native/background-geolocation": "^5.27.0",
+    "@ionic-native/geolocation": "^5.27.0",
     "@ionic/react": "^5.0.7",
     "@ionic/react-router": "^5.0.7",
+    "@mauron85/cordova-plugin-background-geolocation": "^3.1.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^8.0.3",
@@ -15,7 +18,10 @@
     "@types/react-dom": "^16.9.4",
     "@types/react-router": "^5.1.4",
     "@types/react-router-dom": "^5.1.3",
+    "cordova-plugin-geolocation": "^4.0.2",
+    "firebase": "^7.15.5",
     "ionicons": "^5.0.0",
+    "moment": "^2.27.0",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "react-router": "^5.1.2",
